<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mikestudio.luciddreamcatcher.ChoosePicDescriptionActivity"
    android:background="@mipmap/background">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/description_hint" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/editText"
        android:layout_above="@+id/text_cancel"
        android:layout_centerHorizontal="true">
        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:numColumns="auto_fit"
        android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:id="@+id/img_sun"
                android:src="@mipmap/sun"
                android:layout_row="0"
                android:layout_column="0"
                android:tag="sun"/>

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:id="@+id/img_bed"
                android:src="@mipmap/bed"
                android:layout_row="0"
                android:layout_column="1"
                android:tag="bed"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:id="@+id/img_bike"
                android:src="@mipmap/bike"
                android:layout_row="0"
                android:layout_column="2"
                android:tag="bike"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:id="@+id/img_brain"
                android:src="@mipmap/brain"
                android:layout_row="0"
                android:layout_column="3"
                android:tag="brain"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:id="@+id/img_cash"
                android:src="@mipmap/cash"
                android:layout_row="0"
                android:layout_column="4"
                android:tag="cash"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_cat"
                android:src="@mipmap/cat"
                android:layout_row="0"
                android:layout_column="5"
                android:tag="cat"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_clouds"
                android:src="@mipmap/clouds"
                android:layout_row="1"
                android:layout_column="0"
                android:tag="clouds"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_dig"
                android:src="@mipmap/dig"
                android:layout_row="1"
                android:layout_column="1"
                android:tag="dig"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_door"
                android:src="@mipmap/door"
                android:layout_row="1"
                android:layout_column="2"
                android:tag="door"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_drops"
                android:src="@mipmap/drops"
                android:layout_row="1"
                android:layout_column="3"
                android:tag="drops"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_fire"
                android:src="@mipmap/fire"
                android:layout_row="1"
                android:layout_column="4"
                android:tag="fire"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_flower"
                android:src="@mipmap/flower"
                android:layout_row="1"
                android:layout_column="5"
                android:tag="flower"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_home"
                android:src="@mipmap/home"
                android:layout_row="2"
                android:layout_column="0"
                android:tag="home"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_icecream"
                android:src="@mipmap/icecream"
                android:layout_row="2"
                android:layout_column="1"
                android:tag="icecream"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_kettle"
                android:src="@mipmap/kettle"
                android:layout_row="2"
                android:layout_column="2"
                android:tag="kettle"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_keys"
                android:src="@mipmap/keys"
                android:layout_row="2"
                android:layout_column="3"
                android:tag="keys"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_lamp"
                android:src="@mipmap/lamp"
                android:layout_row="2"
                android:layout_column="4"
                android:tag="lamp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_leafs"
                android:src="@mipmap/leafs"
                android:layout_row="2"
                android:layout_column="5"
                android:tag="leafs"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_lights"
                android:src="@mipmap/lights"
                android:layout_row="3"
                android:layout_column="0"
                android:tag="lights"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_loudspeaker"
                android:src="@mipmap/loudspeaker"
                android:layout_row="3"
                android:layout_column="1"
                android:tag="loudspeaker"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_penguin"
                android:src="@mipmap/penguin"
                android:layout_row="3"
                android:layout_column="2"
                android:tag="penguin"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_phonecell"
                android:src="@mipmap/phonecell"
                android:layout_row="3"
                android:layout_column="3"
                android:tag="phonecell"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_phonewire"
                android:src="@mipmap/phonewire"
                android:layout_row="3"
                android:layout_column="4"
                android:tag="phonewire"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_plain"
                android:src="@mipmap/plain"
                android:layout_row="3"
                android:layout_column="5"
                android:tag="plain"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_pyramid"
                android:src="@mipmap/pyramid"
                android:layout_row="4"
                android:layout_column="0"
                android:tag="pyramid"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_rocket"
                android:src="@mipmap/rocket"
                android:layout_row="4"
                android:layout_column="1"
                android:tag="rocket"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_snow"
                android:src="@mipmap/snow"
                android:layout_row="4"
                android:layout_column="2"
                android:tag="snow"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_snowman"
                android:src="@mipmap/snowman"
                android:layout_row="4"
                android:layout_column="3"
                android:tag="snowman"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_spider"
                android:src="@mipmap/spider"
                android:layout_row="4"
                android:layout_column="4"
                android:tag="spider"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_stair"
                android:src="@mipmap/stair"
                android:layout_row="4"
                android:layout_column="5"
                android:tag="stair"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_stopman"
                android:src="@mipmap/stopman"
                android:layout_row="5"
                android:layout_column="0"
                android:tag="stopman"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_clock"
                android:src="@mipmap/clock"
                android:layout_row="5"
                android:layout_column="1"
                android:tag="clock"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_teacher"
                android:src="@mipmap/teacher"
                android:layout_row="5"
                android:layout_column="2"
                android:tag="teacher"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_trash"
                android:src="@mipmap/trash"
                android:layout_row="5"
                android:layout_column="3"
                android:tag="trash"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_tv"
                android:src="@mipmap/tv"
                android:layout_row="5"
                android:layout_column="4"
                android:tag="tv"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_vegetables"
                android:src="@mipmap/vegetables"
                android:layout_row="5"
                android:layout_column="5"
                android:tag="vegetables"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_bird"
                android:src="@mipmap/bird"
                android:layout_row="6"
                android:layout_column="0"
                android:tag="bird"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_stop"
                android:src="@mipmap/stop"
                android:layout_row="7"
                android:layout_column="0"
                android:tag="stop"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_window"
                android:src="@mipmap/window"
                android:layout_row="6"
                android:layout_column="1"
                android:tag="window"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_goman"
                android:src="@mipmap/goman"
                android:layout_row="6"
                android:layout_column="2"
                android:tag="goman"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_lightning"
                android:src="@mipmap/lightning"
                android:layout_row="6"
                android:layout_column="3"
                android:tag="lightning"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_purse"
                android:src="@mipmap/purse"
                android:layout_row="6"
                android:layout_column="4"
                android:tag="purse"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_wheel"
                android:src="@mipmap/wheel"
                android:layout_row="6"
                android:layout_column="5"
                android:tag="wheel"/>


        </GridLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NEGATIVE_BUTTON"
        android:id="@+id/text_cancel"
        android:layout_marginBottom="51dp"
        android:textColor="@color/selector_alarm_clock"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/POSITIVE_BUTTON"
        android:id="@+id/text_yes"
        android:textColor="@color/selector_alarm_clock"
        android:layout_marginRight="52dp"
        android:layout_alignTop="@+id/text_cancel"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_marginEnd="56dp" />

</RelativeLayout>
